[gd_scene load_steps=7 format=3 uid="uid://c40pgjptu5ut3"]

[ext_resource type="Theme" uid="uid://crmwd4ulbqdbp" path="res://HUD.tres" id="1_2o727"]
[ext_resource type="Script" uid="uid://bdsa04hpwbyiy" path="res://Scripts/tutorial.gd" id="1_7bloo"]
[ext_resource type="Texture2D" uid="uid://dubfy75bcvork" path="res://Icons/Additional/Upgrades.png" id="2_uo1fs"]
[ext_resource type="Texture2D" uid="uid://bcsa8dbqod6gt" path="res://Icons/Additional/Stella.png" id="3_uo1fs"]
[ext_resource type="Texture2D" uid="uid://dtjjvx0um41tx" path="res://Icons/Funny/meme.png" id="5_ro48b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uo1fs"]
bg_color = Color(0.13333334, 0.13333334, 0.13333334, 0.5372549)

[node name="Tutorial" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7bloo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2o727")
theme_override_styles/panel = SubResource("StyleBoxFlat_uo1fs")

[node name="TutorialPopUp" type="TextureRect" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -942.5
offset_top = -725.0
offset_right = 942.5
offset_bottom = 507.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uo1fs")

[node name="Label" type="Label" parent="Panel/TutorialPopUp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -388.0
offset_right = 107.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2o727")
theme_override_font_sizes/font_size = 64
text = "Tutorial"

[node name="PrettyLady" type="TextureRect" parent="Panel/TutorialPopUp"]
layout_mode = 0
offset_left = -554.5
offset_top = -105.999985
offset_right = 1493.5
offset_bottom = 1942.0
scale = Vector2(0.69692516, 0.69692516)
texture = ExtResource("3_uo1fs")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/TutorialPopUp"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 0
offset_left = 532.5
offset_top = 505.0
offset_right = 1332.5
offset_bottom = 905.0
theme = ExtResource("1_2o727")
theme_override_font_sizes/normal_font_size = 64
text = "Do you wish to see a quick tutorial on how to play?"
fit_content = true
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Panel/TutorialPopUp"]
layout_mode = 0
offset_left = 652.5
offset_top = 940.0
offset_right = 1223.5
offset_bottom = 1036.0
theme_override_constants/separation = 60

[node name="Yes" type="Button" parent="Panel/TutorialPopUp/Buttons"]
layout_mode = 2
theme = ExtResource("1_2o727")
theme_override_font_sizes/font_size = 64
text = "Yes"

[node name="No" type="Button" parent="Panel/TutorialPopUp/Buttons"]
layout_mode = 2
theme = ExtResource("1_2o727")
theme_override_font_sizes/font_size = 64
text = "No, I'm good"

[node name="TutorialSteps" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -942.5
offset_top = -725.0
offset_right = 942.5
offset_bottom = 507.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uo1fs")

[node name="HeaderText" type="Label" parent="Panel/TutorialSteps"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -388.0
offset_right = 107.0
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2o727")
theme_override_font_sizes/font_size = 64
text = "Tutorial: Step 0"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TutorialSteps"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 0
offset_left = 388.5
offset_top = 427.0
offset_right = 1812.5
offset_bottom = 1027.0

[node name="TextureRect" type="TextureRect" parent="Panel/TutorialSteps/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_ro48b")
expand_mode = 2
stretch_mode = 5

[node name="StepText" type="RichTextLabel" parent="Panel/TutorialSteps/HBoxContainer"]
custom_minimum_size = Vector2(690, 0)
layout_mode = 2
theme = ExtResource("1_2o727")
theme_override_font_sizes/normal_font_size = 46
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaa"
fit_content = true
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrettyLady" type="TextureRect" parent="Panel/TutorialSteps"]
layout_mode = 0
offset_left = -554.5
offset_top = -105.999985
offset_right = 1493.5
offset_bottom = 1942.0
scale = Vector2(0.69692516, 0.69692516)
texture = ExtResource("3_uo1fs")

[node name="Buttons" type="HBoxContainer" parent="Panel/TutorialSteps"]
layout_mode = 0
offset_left = 412.5
offset_top = 1051.0
offset_right = 1702.5
offset_bottom = 1147.0
theme_override_constants/separation = 500

[node name="Back" type="Button" parent="Panel/TutorialSteps/Buttons"]
layout_mode = 2
tooltip_text = "Previous Step"
theme = ExtResource("1_2o727")
theme_override_font_sizes/font_size = 64
text = "<"

[node name="Close" type="Button" parent="Panel/TutorialSteps/Buttons"]
layout_mode = 2
theme = ExtResource("1_2o727")
theme_override_font_sizes/font_size = 64
text = "Close"

[node name="Forward" type="Button" parent="Panel/TutorialSteps/Buttons"]
layout_mode = 2
tooltip_text = "Next Step"
theme = ExtResource("1_2o727")
theme_override_font_sizes/font_size = 64
text = ">"

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="pressed" from="Panel/TutorialPopUp/Buttons/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Panel/TutorialPopUp/Buttons/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="Panel/TutorialSteps/Buttons/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/TutorialSteps/Buttons/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Panel/TutorialSteps/Buttons/Forward" to="." method="_on_forward_pressed"]
